Update: Wil.lang

--- a/WIL.lang
+++ b/WIL.lang
@@ -17,3 +17,14 @@ Ah yes! I am sorry for the insolent curse-word...
 Secon, this is a project _now_. So it needs a development (url: https://github.com/bhdz/will_project; interpreter? your browser dawg!) # Here there is a bug in the writ. 
 
 ##writ?... Can you guess what it is? If you guessed it then this is good to know about.
+====================================================================================================
+New::HTML::
+
+First%thing {{first NDA)) document%section
+
+First%thing::
+
+document%section::
+
+Notes:: //Y/ ~The painter of these words~~//Kolo-bryan:~C/C++ *ninja*﻿
+====================================================================================================
